tests/src/frontend/typechecking/invalid/class_type3.sk
trait MyTC {
  static fun foo(): void {
    static::foo()
  }
}

fun foo(): void {
  MyTC::foo()
}
